[tool.pdm]
distribution = true

[project]
name = "migration_procedure_generator"
version = "0.1.0"
description = ""
authors = [
    {name = "NEC corporation."},
]
dependencies = [
    "jsonschema<5.0.0,>=4.23.0",
    "uvicorn<1.0.0,>=0.34.0",
    "fastapi<1.0.0,>=0.115.8",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
]
requires-python = "<4.0,>=3.13"
readme = "README.md"
license = {text = "LICENSE"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "pytest-mock",
    "autopep8",
    "isort",
    "pre-commit",
    "pylint",
    "black",
    "pytest-httpserver",
    "radon",
    "httpx",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project.scripts]
migrationprocedures = "migration_procedure_generator.core:main"
migrationprocedures-server = "migration_procedure_generator.server:main"


[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --cov --cov-branch tests --cov-report xml --capture=no --cov-report=term-missing --tb=line --cov-fail-under=100"
filterwarnings = "ignore::DeprecationWarning"
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = "True"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/cdimlogger/*",
]